--- a/config/database.yml
+++ b/config/database.yml
@@ -18,24 +18,24 @@ test:
   pool: 5
   timeout: 5000
 
-# production:
-#   adapter: mysql
-#   encoding: utf8
-#   database: <%=ENV['OPENSHIFT_APP_NAME']%>
-#   pool: 5
-#   host: <%=ENV['OPENSHIFT_MYSQL_DB_HOST']%>
-#   port: <%=ENV['OPENSHIFT_MYSQL_DB_PORT']%>
-#   username: <%=ENV['OPENSHIFT_MYSQL_DB_USERNAME']%>
-#   password: <%=ENV['OPENSHIFT_MYSQL_DB_PASSWORD']%>
-#   socket: <%=ENV['OPENSHIFT_MYSQL_DB_SOCKET']%>
 production:
-  adapter: mysql2
+  adapter: mysql
   encoding: utf8
-  reconnect: false
-  pool: 5
   database: <%=ENV['OPENSHIFT_APP_NAME']%>
+  pool: 5
+  host: <%=ENV['OPENSHIFT_MYSQL_DB_HOST']%>
+  port: <%=ENV['OPENSHIFT_MYSQL_DB_PORT']%>
   username: <%=ENV['OPENSHIFT_MYSQL_DB_USERNAME']%>
   password: <%=ENV['OPENSHIFT_MYSQL_DB_PASSWORD']%>
-  # socket:   <%=ENV['OPENSHIFT_MYSQL_DB_SOCKET']%>
-  host:     <%=ENV['OPENSHIFT_MYSQL_DB_HOST']%>
-  port:     <%=ENV['OPENSHIFT_MYSQL_DB_PORT']%>
+  socket: <%=ENV['OPENSHIFT_MYSQL_DB_SOCKET']%>
+# production:
+#   adapter: mysql2
+#   encoding: utf8
+#   reconnect: false
+#   pool: 5
+#   database: <%=ENV['OPENSHIFT_APP_NAME']%>
+#   username: <%=ENV['OPENSHIFT_MYSQL_DB_USERNAME']%>
+#   password: <%=ENV['OPENSHIFT_MYSQL_DB_PASSWORD']%>
+#   # socket:   <%=ENV['OPENSHIFT_MYSQL_DB_SOCKET']%>
+#   host:     <%=ENV['OPENSHIFT_MYSQL_DB_HOST']%>
+#   port:     <%=ENV['OPENSHIFT_MYSQL_DB_PORT']%>
